Included the remaining translations, updated dependencies, small style fixes

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -1,8 +1,14 @@
 {
+  "back": "Zurück",
+  "calculator": "Taschenrechner",
   "cancel": "Abbrechen",
   "choose_a_game": "Wähle ein Spiel",
+  "copy": "Kopieren",
+  "damage_calculator": "Schadensrechner",
   "decreased_stat": "Verringerte statistik",
-  "export": "Exportar",
+  "delete_custom": "Dadurch wird das benutzerdefinierte Spiel gelöscht. Bist du sicher?",
+  "delete_success": "Spiel wurde erfolgreich gelöscht",
+  "export": "Export",
   "generations": "Generationen",
   "Has no effect on": "Hat keine Auswirkung auf",
   "Immune to": "Immun gegen",
@@ -11,11 +17,16 @@
   "Not very effective against": "Nicht sehr wirksam gegen",
   "please_enter": "Bitte geben Sie den Spielnamen ein",
   "please_select": "Bitte wählen Sie ein Spiel aus",
+  "report": "Melden",
   "Resists": "Widersteht",
   "save": "Speichern",
   "search": "Suche",
   "see_more": "Mehr sehen",
+  "select": "Wähle",
   "select_move": "Wähle einen move...",
+  "share_success": "Jetzt teilen",
+  "status": "Status",
+  "suggested": "EMPFOHLEN",
   "Super effective against": "Super effektiv gegen",
   "tracker": "Tracker",
   "types": "Typen",
