--- a/src/locale/es/about.json
+++ b/src/locale/es/about.json
@@ -1,6 +1,6 @@
 {
   "about": "Acerca de",
-  "below": "debajo.",
+  "below": "abajo.",
   "coffee": "enlace de Buy Me a Coffee",
   "credits": "Créditos",
   "favicon_provided": "Favicon proporcionada por ",
@@ -12,6 +12,6 @@
   "optionally": "opcionalmente",
   "source": "Fuente",
   "thank_you_1": "¡Gracias por usar Nuzlocke Tracker! Otros colaboradores y yo estamos mejorando activamente esta aplicación en nuestro tiempo libre. Si le gusta la aplicación, califíquela en Microsoft Store, Google Play o Amazon Appstore. Para ",
-  "thank_you_2": "para apoyar la aplicación, consulte el ",
+  "thank_you_2": "apoyar la aplicación, consulte el ",
   "under_the": "bajo la "
 }
