--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -1,7 +1,13 @@
 {
+  "back": "Back",
+  "calculator": "Calculator",
   "cancel": "Cancel",
   "choose_a_game": "Choose a game",
+  "copy": "Copy",
+  "damage_calculator": "Damage Calculator",
   "decreased_stat": "Decreased stat",
+  "delete_custom": "This will delete the custom game. Are you sure?",
+  "delete_success": "Successfully deleted game",
   "export": "Export",
   "generations": "Generations",
   "Has no effect on": "Has no effect on",
@@ -11,11 +17,16 @@
   "Not very effective against": "Not very effective against",
   "please_enter": "Please enter the game name",
   "please_select": "Please select a game",
+  "report": "Report",
   "Resists": "Resists",
   "save": "Save",
   "search": "Search",
   "see_more": "See more",
+  "select": "Select",
   "select_move": "Select a move...",
+  "share_success": "Sharing now available",
+  "status": "Status",
+  "suggested": "SUGGESTED",
   "Super effective against": "Super effective against",
   "tracker": "Tracker",
   "types": "Types",
