--- a/src/locale/es/report.json
+++ b/src/locale/es/report.json
@@ -1,6 +1,6 @@
 {
   "browser": "Navegador",
-  "description": "Description",
+  "description": "Descripción",
   "device": "Dispositivo",
   "os": "SO",
   "report_a_bug": "Reportar un bug o sugerir una función",
