Added direct leveling, updated import/exporting for current state

--- a/src/locale/de/tracker.json
+++ b/src/locale/de/tracker.json
@@ -9,16 +9,21 @@
   "alert_type": "Pokémon dieses Typs sind nicht erlaubt",
   "cause_of_fainting": "Ursache der Ohnmacht",
   "confirm_delete": "Dadurch wird die Begegnung gelöscht. Bist du sicher?",
+  "delete": "Löschen",
+  "edit": "Bearbeiten",
   "edit_badges": "Abzeichen bearbeiten",
   "enter": "Eingeben",
   "evolution_chain": "Evolutionskette",
   "export_to_builder": "In Builder exportieren",
   "export_to_game": "Ins Spiel exportieren und schließen",
+  "level_down": "Einebnen",
+  "level_up": "Aufleveln",
   "met_level": "Level gefunden",
   "nickname": "Spitzname",
   "please_location": "Bitte geben Sie den Standortnamen ein",
   "pokemon_export": "Pokémon erfolgreich exportiert",
   "reset": "ZURÜCKSETZEN",
+  "reset_2": "Zurücksetzen",
   "reset_confirm": "Dadurch werden alle Begegnungen für das ausgewählte Spiel zurückgesetzt und benutzerdefinierte Begegnungen gelöscht. Bist du sicher?",
   "reset_encounters": "Begegnungen zurücksetzen",
   "reset_success": "Begegnungen wurden erfolgreich zurückgesetzt"
