--- a/src/locale/en/tracker.json
+++ b/src/locale/en/tracker.json
@@ -9,16 +9,21 @@
   "alert_type": "Pokémon of this type are not allowed",
   "cause_of_fainting": "Cause of Fainting",
   "confirm_delete": "This will delete the encounter. Are you sure?",
+  "delete": "Delete",
+  "edit": "Edit",
   "edit_badges": "Edit Badges",
   "enter": "Enter",
   "evolution_chain": "Evolution Chain",
   "export_to_builder": "Export to Builder",
   "export_to_game": "Export to game and close",
+  "level_down": "Level down",
+  "level_up": "Level up",
   "met_level": "Met Level",
   "nickname": "Nickname",
   "please_location": "Please enter the location name",
   "pokemon_export": "Pokémon successfully exported",
   "reset": "RESET",
+  "reset_2": "Reset",
   "reset_confirm": " This will reset all encounters for the selected game and delete custom encounters. Are you sure?",
   "reset_encounters": "Reset Encounters ",
   "reset_success": "Successfully reset encounters"
