--- a/src/locale/es/tracker.json
+++ b/src/locale/es/tracker.json
@@ -9,16 +9,21 @@
   "alert_type": "No se permiten Pokémon de este tipo.",
   "cause_of_fainting": "Causa de desmayo",
   "confirm_delete": "Esto eliminará el encuentro. ¿Está seguro?",
+  "delete": "Eliminar",
+  "edit": "Editar",
   "edit_badges": "Editar insignias",
   "enter": "Ingresar",
   "evolution_chain": "Cadena de evolución",
   "export_to_builder": "Exportar a Builder",
   "export_to_game": "Exportar al juego y cerrar",
+  "level_down": "Bajar nivel",
+  "level_up": "Subir nivel",
   "met_level": "Nivel encontrado",
   "nickname": "Apodo",
   "please_location": "Ingrese el nombre de la ubicación",
   "pokemon_export": "Pokémon exportado con éxito",
   "reset": "RESETEAR",
+  "reset_2": "Resetear",
   "reset_confirm": "Esto restablecerá todos los encuentros del juego seleccionado y eliminará los encuentros personalizados. ¿Está seguro?",
   "reset_encounters": "Restablecer encuentros",
   "reset_success": "Los encuentros se restablecieron con éxito"
