--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -8,12 +8,14 @@
   "decreased_stat": "Decreased stat",
   "delete_custom": "This will delete the custom game. Are you sure?",
   "delete_success": "Successfully deleted game",
+  "encounter_template": "Encounter Template",
   "export": "Export",
   "generations": "Generations",
   "Has no effect on": "Has no effect on",
   "Immune to": "Immune to",
   "increased_stat": "Increased stat",
   "nature": "Nature",
+  "none": "None",
   "Not very effective against": "Not very effective against",
   "please_enter": "Please enter the game name",
   "please_select": "Please select a game",
@@ -28,6 +30,7 @@
   "status": "Status",
   "suggested": "SUGGESTED",
   "Super effective against": "Super effective against",
+  "template_hint": "Note this will only copy over the possible encounters and level cap numbers but not the gym information",
   "tracker": "Tracker",
   "types": "Types",
   "Weak against": "Weak against"
