Updated share tests, replaced share functionality for text, updated dependencies

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -4,6 +4,7 @@
   "cancel": "Abbrechen",
   "choose_a_game": "Wähle ein Spiel",
   "copy": "Kopieren",
+  "copied": "Kopiert",
   "damage_calculator": "Schadensrechner",
   "decreased_stat": "Verringerte statistik",
   "delete_custom": "Dadurch wird das benutzerdefinierte Spiel gelöscht. Bist du sicher?",
