--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -4,6 +4,7 @@
   "cancel": "Cancelar",
   "choose_a_game": "Elige un juego",
   "copy": "Copiar",
+  "copied": "Copiado",
   "damage_calculator": "Calculadora de daños",
   "decreased_stat": "Stat disminuida",
   "delete_custom": "Esto eliminará el juego personalizado. ¿Estás seguro?",
