--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -4,6 +4,7 @@
   "cancel": "Cancel",
   "choose_a_game": "Choose a game",
   "copy": "Copy",
+  "copied": "Copied",
   "damage_calculator": "Damage Calculator",
   "decreased_stat": "Decreased stat",
   "delete_custom": "This will delete the custom game. Are you sure?",
