Swap functionality, new look for tracker encounters, style fixes

--- a/src/locale/en/builder.json
+++ b/src/locale/en/builder.json
@@ -1,7 +1,7 @@
 {
   "coverage": "Coverage",
   "delete": "DELETE",
-  "number_of_moves": "# of move strong against",
+  "number_of_moves": "# of moves strong against",
   "press_plus": "Press + to begin building a team",
   "weak_against": "Weak against"
 }
