Added scroller list and pokemon stats to badge details, changed some color schemes and localizations

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -23,6 +23,7 @@
   "Resists": "Widersteht",
   "save": "Speichern",
   "search": "Suche",
+  "search_help": "Suche nach Pokémon, Standort oder Status",
   "see_more": "Mehr sehen",
   "select": "Wähle",
   "select_move": "Wähle einen move...",
