--- a/src/locale/de/tracker.json
+++ b/src/locale/de/tracker.json
@@ -8,6 +8,7 @@
   "alert_max": "Maximale Anzahl an Pokémon pro Team beträgt 6",
   "alert_overleveled": "Das eingestellte Höchstniveau wurde überschritten",
   "alert_type": "Pokémon dieses Typs sind nicht erlaubt",
+  "click_on_any_location": "Klicken Sie auf einen beliebigen Ort, um dorthin zu scrollen",
   "cause_of_fainting": "Ursache der Ohnmacht",
   "confirm_delete": "Dadurch wird die Begegnung gelöscht. Bist du sicher?",
   "delete": "Löschen",
