--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -24,6 +24,7 @@
   "Resists": "Resists",
   "save": "Save",
   "search": "Search",
+  "search_help": "Search by Pokémon, location, or status",
   "see_more": "See more",
   "select": "Select",
   "select_move": "Select a move...",
