--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -23,6 +23,7 @@
   "Resists": "Resiste",
   "save": "Guardar",
   "search": "Buscar",
+  "search_help": "Buscar por Pokémon, ubicación o estado",
   "see_more": "Ver más",
   "select": "Seleccione",
   "select_move": "Seleccione un move...",
