--- a/src/locale/en/tracker.json
+++ b/src/locale/en/tracker.json
@@ -8,6 +8,7 @@
   "alert_max": "Maximum amount of pokémon per team is 6",
   "alert_overleveled": "Max level set has been exceeded",
   "alert_type": "Pokémon of this type are not allowed",
+  "click_on_any_location": "Click on any location to scroll to it",
   "cause_of_fainting": "Cause of Fainting",
   "confirm_delete": "This will delete the encounter. Are you sure?",
   "delete": "Delete",
