--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -9,6 +9,7 @@
   "decreased_stat": "Stat disminuida",
   "delete_custom": "Esto eliminará el juego personalizado. ¿Estás seguro?",
   "delete_success": "El juego se eliminó correctamente",
+  "dupe_description": "Un dupe es un pokémon que ya ha sido capturado",
   "export": "Exportar",
   "generations": "Generaciones",
   "Has no effect on": "No tiene ningún efecto sobre",
