--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -9,6 +9,7 @@
   "decreased_stat": "Verringerte statistik",
   "delete_custom": "Dadurch wird das benutzerdefinierte Spiel gelöscht. Bist du sicher?",
   "delete_success": "Spiel wurde erfolgreich gelöscht",
+  "dupe_description": "Ein Dupe ist ein bereits gefangenes Pokémon",
   "export": "Export",
   "generations": "Generationen",
   "Has no effect on": "Hat keine Auswirkung auf",
