More test fixes

--- a/src/locale/de/calculator.json
+++ b/src/locale/de/calculator.json
@@ -7,7 +7,9 @@
   "game_type": "Spiel Typ",
   "gender": "Geschlecht...",
   "generation": "Generation",
+  "invalid_calculation": "Ungültige Berechnung",
   "modifier": "Modifikator",
+  "no_move_selected": "Kein Zug ausgewählt",
   "reset": "Zurücksetzen",
   "select": "Auswählen...",
   "select_ability": "Wähle eine Fähigkeit aus...",
