--- a/src/locale/en/calculator.json
+++ b/src/locale/en/calculator.json
@@ -7,7 +7,9 @@
   "game_type": "Game type",
   "gender": "Gender...",
   "generation": "Generation",
+  "invalid_calculation": "Invalid calculation",
   "modifier": "Modifier",
+  "no_move_selected": "No move selected",
   "reset": "Reset",
   "select": "Select...",
   "select_ability": "Select an ability...",
