--- a/src/locale/es/calculator.json
+++ b/src/locale/es/calculator.json
@@ -7,7 +7,9 @@
   "game_type": "Tipo de juego",
   "gender": "Género...",
   "generation": "Generación",
+  "invalid_calculation": "Cálculo inválido",
   "modifier": "Modificador",
+  "no_move_selected": "Ningún move seleccionado",
   "reset": "Resetear",
   "select": "Seleccionar...",
   "select_ability": "Selecciona una habilidad...",
