Added how data storage link works in about section, fixed some encounters

--- a/src/locale/es/about.json
+++ b/src/locale/es/about.json
@@ -14,5 +14,5 @@
   "thank_you_1": "¡Gracias por usar Nuzlocke Tracker! Otros colaboradores y yo estamos mejorando activamente esta aplicación en nuestro tiempo libre. Si le gusta la aplicación, califíquela en Microsoft Store, Google Play o Amazon Appstore. Para ",
   "thank_you_2": "apoyar la aplicación, consulte el ",
   "under_the": "bajo la ",
-  "warning_message": "Esta aplicación utiliza las cookies / almacenamiento local de su navegador para funcionar correctamente. Si la caché o los datos del navegador se borran alguna vez, la aplicación perderá todos sus datos"
+  "warning_message": "Esta aplicación utiliza las cookies / almacenamiento local de su navegador para funcionar correctamente. Si la caché o los datos del navegador se borran alguna vez, la aplicación perderá todos sus datos. Consulte este enlace para obtener más información:"
 }
