initial community tab implemention, added amulet coin, added sandy cave to USUM

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -4,6 +4,7 @@
   "calculator": "Taschenrechner",
   "cancel": "Abbrechen",
   "choose_a_game": "Wähle ein Spiel",
+  "community": "Gemeinschaft",
   "copy": "Kopieren",
   "copied": "Kopiert",
   "damage_calculator": "Schadensrechner",
