--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -4,6 +4,7 @@
   "calculator": "Calculator",
   "cancel": "Cancel",
   "choose_a_game": "Choose a game",
+  "community": "Community",
   "copy": "Copy",
   "copied": "Copied",
   "damage_calculator": "Damage Calculator",
