--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -4,6 +4,7 @@
   "calculator": "Calculadora",
   "cancel": "Cancelar",
   "choose_a_game": "Elige un juego",
+  "community": "Comunidad",
   "copy": "Copiar",
   "copied": "Copiado",
   "damage_calculator": "Calculadora de daños",
