Added soothe bell, fixed crash with forbidden items, switched localization for calculator

--- a/src/locale/en/calculator.json
+++ b/src/locale/en/calculator.json
@@ -20,6 +20,7 @@
   "select_one": "Select one to show it as the primary result at the top",
   "select_status": "Select a status...",
   "show_all": "Show all",
+  "show_my": "Show my Pokémon",
   "singles": "Singles",
   "terrain": "Terrain",
   "weather": "Weather"
