--- a/src/locale/de/calculator.json
+++ b/src/locale/de/calculator.json
@@ -20,6 +20,7 @@
   "select_one": "Wählen Sie eines aus, um es als primäres Ergebnis oben anzuzeigen",
   "select_status": "Wählen Sie einen Status aus...",
   "show_all": "Zeige alles",
+  "show_my": "Zeig mein Pokémon",
   "singles": "Einzel",
   "terrain": "Terrain",
   "weather": "Wetter"
