--- a/src/locale/en/calculator.json
+++ b/src/locale/en/calculator.json
@@ -20,6 +20,7 @@
   "select_one": "Select one to show it as the primary result at the top",
   "select_status": "Select a status...",
   "show_all": "Show all",
+  "show_help": "In order for a Pokémon to appear, it must be in the tracker with a captured, gifted, traded or, team status",
   "show_my": "Show my Pokémon",
   "singles": "Singles",
   "terrain": "Terrain",
