--- a/src/locale/es/calculator.json
+++ b/src/locale/es/calculator.json
@@ -20,6 +20,7 @@
   "select_one": "Seleccione uno para mostrarlo como resultado principal en la parte superior",
   "select_status": "Seleccionar un estado..",
   "show_all": "Mostrar todos",
+  "show_help": "Para que aparezca un Pokémon, debe estar en el rastreador con un estado de capturado, regalado, intercambiado o equipo",
   "show_my": "Mostrar mis Pokémon",
   "singles": "Individual",
   "terrain": "Terreno",
