Soul link option in pokemon details

--- a/src/locale/de/settings.json
+++ b/src/locale/de/settings.json
@@ -7,5 +7,6 @@
   "show_all": "Zeige alle Pokémon in jeder Begegnung",
   "show_missing": "Nur fehlende Begegnungen anzeigen",
   "show_nicknames": "Spitznamen anzeigen",
+  "show_soulink": "Option anzeigen, um ein Seelenlink-Pokémon aus den Details auszuwählen",
   "show_suggestions": "Zeige Vorschläge"
 }
