--- a/src/locale/es/settings.json
+++ b/src/locale/es/settings.json
@@ -7,5 +7,6 @@
   "show_all": "Mostrar todos los pokémon en cada encuentro",
   "show_missing": "Mostrar solo los encuentros perdidos",
   "show_nicknames": "Mostrar apodos",
+  "show_soulink": "Mostrar opción para seleccionar un pokémon Soul Link en los detalles",
   "show_suggestions": "Mostrar sugerencias"
 }
