Updated changelog and added abilities info

--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -8,6 +8,7 @@
   "copied": "Kopiert",
   "damage_calculator": "Schadensrechner",
   "decreased_stat": "Verringerte statistik",
+  "description": "Beschreibung",
   "delete_custom": "Dadurch wird das benutzerdefinierte Spiel gelöscht. Bist du sicher?",
   "delete_success": "Spiel wurde erfolgreich gelöscht",
   "dupe_description": "Ein Dupe ist ein bereits gefangenes Pokémon",
@@ -16,6 +17,7 @@
   "Has no effect on": "Hat keine Auswirkung auf",
   "Immune to": "Immun gegen",
   "increased_stat": "Erhöhte statistik",
+  "name": "Name",
   "nature": "Natur",
   "None": "Keiner",
   "Not very effective against": "Nicht sehr wirksam gegen",
