--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -8,6 +8,7 @@
   "copied": "Copied",
   "damage_calculator": "Damage Calculator",
   "decreased_stat": "Decreased stat",
+  "description": "Description",
   "delete_custom": "This will delete the custom game. Are you sure?",
   "delete_success": "Successfully deleted game",
   "dupe_description": "A dupe is a pokémon that has already been captured",
@@ -17,6 +18,7 @@
   "Has no effect on": "Has no effect on",
   "Immune to": "Immune to",
   "increased_stat": "Increased stat",
+  "name": "Name",
   "nature": "Nature",
   "none": "None",
   "Not very effective against": "Not very effective against",
