--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -8,6 +8,7 @@
   "copied": "Copiado",
   "damage_calculator": "Calculadora de daños",
   "decreased_stat": "Stat disminuida",
+  "description": "Descripción",
   "delete_custom": "Esto eliminará el juego personalizado. ¿Estás seguro?",
   "delete_success": "El juego se eliminó correctamente",
   "dupe_description": "Un dupe es un pokémon que ya ha sido capturado",
@@ -16,6 +17,7 @@
   "Has no effect on": "No tiene ningún efecto sobre",
   "Immune to": "Immune a",
   "increased_stat": "Stat aumentada",
+  "name": "Nombre",
   "nature": "Naturaleza",
   "None": "Ninguno",
   "Not very effective against": "No muy efectiva contra",
