Notes functionality and tests

--- a/src/locale/de/tracker.json
+++ b/src/locale/de/tracker.json
@@ -23,6 +23,7 @@
   "level_up": "Aufleveln",
   "met_level": "Level gefunden",
   "nickname": "Spitzname",
+  "notes": "Notizen",
   "please_location": "Bitte geben Sie den Standortnamen ein",
   "pokemon_export": "Pokémon erfolgreich exportiert",
   "reset": "ZURÜCKSETZEN",
