--- a/src/locale/en/tracker.json
+++ b/src/locale/en/tracker.json
@@ -23,6 +23,7 @@
   "level_up": "Level up",
   "met_level": "Met Level",
   "nickname": "Nickname",
+  "notes": "Notes",
   "please_location": "Please enter the location name",
   "pokemon_export": "Pokémon successfully exported",
   "reset": "RESET",
