--- a/src/locale/es/tracker.json
+++ b/src/locale/es/tracker.json
@@ -23,6 +23,7 @@
   "level_up": "Subir nivel",
   "met_level": "Nivel encontrado",
   "nickname": "Apodo",
+  "notes": "Apuntes",
   "please_location": "Ingrese el nombre de la ubicación",
   "pokemon_export": "Pokémon exportado con éxito",
   "reset": "RESETEAR",
