fix: reset encounters resets badges, added pewter city to rby, added zubat and golbat to iron island in bdsp, fixed roarks cranidos in dpp

--- a/src/locale/en/tracker.json
+++ b/src/locale/en/tracker.json
@@ -28,7 +28,7 @@
   "pokemon_export": "Pokémon successfully exported",
   "reset": "RESET",
   "reset_2": "Reset",
-  "reset_confirm": " This will reset all encounters for the selected game and delete custom encounters. Are you sure?",
+  "reset_confirm": "This will reset all encounters for the selected game, delete custom encounters, and unmark all badges. Are you sure?",
   "reset_encounters": "Reset Encounters ",
   "reset_success": "Successfully reset encounters",
   "share": "Share"
