--- a/src/locale/de/tracker.json
+++ b/src/locale/de/tracker.json
@@ -28,7 +28,7 @@
   "pokemon_export": "Pokémon erfolgreich exportiert",
   "reset": "ZURÜCKSETZEN",
   "reset_2": "Zurücksetzen",
-  "reset_confirm": "Dadurch werden alle Begegnungen für das ausgewählte Spiel zurückgesetzt und benutzerdefinierte Begegnungen gelöscht. Bist du sicher?",
+  "reset_confirm": "Dadurch werden alle Begegnungen für das ausgewählte Spiel zurückgesetzt, benutzerdefinierte Begegnungen gelöscht und die Markierung aller Abzeichen aufgehoben. Bist du sicher?",
   "reset_encounters": "Begegnungen zurücksetzen",
   "reset_success": "Begegnungen wurden erfolgreich zurückgesetzt",
   "share": "Teilen"
