fix: Fixed usum, frlg encounters, fixed aegislash bug in calculator, added tooltip in selector for showall

--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -33,6 +33,7 @@
   "select": "Select",
   "select_move": "Select a move...",
   "share_success": "Sharing now available",
+  "show_all_tooltip": "If you don't happen to see the pokémon you're looking for here you can see all pokémon by enabling the option in the settings page",
   "status": "Status",
   "suggested": "SUGGESTED",
   "Super effective against": "Super effective against",
