--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -32,6 +32,7 @@
   "select": "Seleccione",
   "select_move": "Seleccione un move...",
   "share_success": "Compartir ahora disponible",
+  "show_all_tooltip": "Si no ves el pokémon que estás buscando aquí, puedes ver todos los pokémon activando la opción en la página de configuración",
   "status": "Estado",
   "suggested": "SUGERENCIA",
   "Super effective against": "Super efectivo contra",
