--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -32,6 +32,7 @@
   "select": "Wähle",
   "select_move": "Wähle einen move...",
   "share_success": "Jetzt teilen",
+  "show_all_tooltip": "Wenn Sie das gesuchte Pokémon hier nicht sehen, können Sie alle Pokémon sehen, indem Sie die Option auf der Einstellungsseite aktivieren",
   "status": "Status",
   "suggested": "EMPFOHLEN",
   "Super effective against": "Super effektiv gegen",
