--- a/src/locale/en/common.json
+++ b/src/locale/en/common.json
@@ -33,7 +33,7 @@
   "select": "Select",
   "select_move": "Select a move...",
   "share_success": "Sharing now available",
-  "show_all_tooltip": "If you don't happen to see the pokémon you're looking for here you can see all pokémon by enabling the option in the settings page",
+  "show_all_tooltip": "If you don't happen to see the pokémon you're looking for here you can see all pokémon by enabling the option on the settings page. And please report any missing encounters as a bug to help out fellow nuzlockers.",
   "status": "Status",
   "suggested": "SUGGESTED",
   "Super effective against": "Super effective against",
