feat: moved dark mode to settings page. Added logout functionality, fixed darkmode test, refactored export to selector, added nuzlocke saving functionality

--- a/src/locale/de/settings.json
+++ b/src/locale/de/settings.json
@@ -1,5 +1,6 @@
 {
   "custom_status": "Benutzerdefinierter Status",
+  "darkmode": "Dunkler Modus",
   "duplicate_clause": "Duplicate-Klausel (Warnung bei doppeltem Pokémon anzeigen)",
   "edit_custom_status": "Benutzerdefinierte Status bearbeiten",
   "language": "Sprache",
