--- a/src/locale/en/settings.json
+++ b/src/locale/en/settings.json
@@ -1,5 +1,6 @@
 {
   "custom_status": "Custom status",
+  "darkmode": "Dark mode",
   "duplicate_clause": "Duplicate clause (Show alert on duplicate pokémon)",
   "edit_custom_status": "Edit custom statuses",
   "language": "Language",
