--- a/src/locale/es/settings.json
+++ b/src/locale/es/settings.json
@@ -1,5 +1,6 @@
 {
   "custom_status": "Estado personalizado",
+  "darkmode": "Modo Oscuro",
   "duplicate_clause": "Cláusula de duplicados (Mostrar alerta en Pokémon repetidos)",
   "edit_custom_status": "Editar estados personalizados",
   "language": "Idioma",
