--- a/src/locale/de/common.json
+++ b/src/locale/de/common.json
@@ -14,6 +14,7 @@
   "dupe_description": "Ein Dupe ist ein bereits gefangenes Pokémon",
   "export": "Export",
   "generations": "Generationen",
+  "get_profile_error": "Profil kann nicht abgerufen werden",
   "Has no effect on": "Hat keine Auswirkung auf",
   "Immune to": "Immun gegen",
   "increased_stat": "Erhöhte statistik",
