--- a/src/locale/es/common.json
+++ b/src/locale/es/common.json
@@ -14,6 +14,7 @@
   "dupe_description": "Un dupe es un pokémon que ya ha sido capturado",
   "export": "Exportar",
   "generations": "Generaciones",
+  "get_profile_error": "No se puede obtener el perfil",
   "Has no effect on": "No tiene ningún efecto sobre",
   "Immune to": "Immune a",
   "increased_stat": "Stat aumentada",
